# stm32f103-hal-rs

./: Cargo.toml  LICENSE  README.md  build.rs  link.x
.cargo/: config.toml
examples/: gpio_example.rs
src/: lib.rs  peripherals.rs  rt.rs
src/peripherals/: gpio.rs  rcc.rs
src/peripherals/gpio/: pin.rs
